Refactor and removed some deprecations.